tests/src/snapshots/fe_compiler_tests__analysis__case_039_return_bitwiseshr_i256.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "x",
                                Base(
                                    Numeric(
                                        I256,
                                    ),
                                ),
                            ),
                            (
                                "y",
                                Base(
                                    Numeric(
                                        U256,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Numeric(
                                I256,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/return_bitwiseshr_i256.fe:3:16
  │
3 │         return x >> y
  │                ^ attributes hash: 17351186385905986417
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                I256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_bitwiseshr_i256.fe:3:21
  │
3 │         return x >> y
  │                     ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_bitwiseshr_i256.fe:3:16
  │
3 │         return x >> y
  │                ^^^^^^ attributes hash: 17351186385905986417
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                I256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_bitwiseshr_i256.fe:2:5
  │  
2 │ ╭     pub def bar(x: i256, y: u256) -> i256:
3 │ │         return x >> y
  │ ╰─────────────────────^ attributes hash: 18235564038652336928
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "x",
                Base(
                    Numeric(
                        I256,
                    ),
                ),
            ),
            (
                "y",
                Base(
                    Numeric(
                        U256,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Numeric(
                I256,
            ),
        ),
    }

note: 
  ┌─ features/return_bitwiseshr_i256.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar(x: i256, y: u256) -> i256:
3 │ │         return x >> y
  │ ╰─────────────────────^ attributes hash: 336386928371321247
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "x",
                        Base(
                            Numeric(
                                I256,
                            ),
                        ),
                    ),
                    (
                        "y",
                        Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Numeric(
                        I256,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/return_bitwiseshr_i256.fe:2:20
  │
2 │     pub def bar(x: i256, y: u256) -> i256:
  │                    ^^^^ attributes hash: 5923332062417896707
  │
  = Base(
        Numeric(
            I256,
        ),
    )

note: 
  ┌─ features/return_bitwiseshr_i256.fe:2:29
  │
2 │     pub def bar(x: i256, y: u256) -> i256:
  │                             ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/return_bitwiseshr_i256.fe:2:38
  │
2 │     pub def bar(x: i256, y: u256) -> i256:
  │                                      ^^^^ attributes hash: 5923332062417896707
  │
  = Base(
        Numeric(
            I256,
        ),
    )


