tests/src/snapshots/fe_compiler_tests__analysis__case_042_return_bool_false.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [],
                        return_type: Base(
                            Bool,
                        ),
                    },
                ],
            },
        ),
    },
    tuples_used: {},
}

note: 
  ┌─ features/return_bool_false.fe:3:16
  │
3 │         return false
  │                ^^^^^ attributes hash: 10866140763116710699
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_bool_false.fe:2:5
  │  
2 │ ╭     pub def bar() -> bool:
3 │ │         return false
  │ ╰────────────────────^ attributes hash: 18095049223467442390
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [],
        return_type: Base(
            Bool,
        ),
    }

note: 
  ┌─ features/return_bool_false.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar() -> bool:
3 │ │         return false
  │ ╰────────────────────^ attributes hash: 8669656455121060528
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [],
                return_type: Base(
                    Bool,
                ),
            },
        ],
        init_function: None,
        events: [],
        list_expressions: {},
        string_literals: {},
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/return_bool_false.fe:2:22
  │
2 │     pub def bar() -> bool:
  │                      ^^^^ attributes hash: 8311861578736502650
  │
  = Base(
        Bool,
    )


