tests/src/snapshots/fe_compiler_tests__analysis__case_043_return_bool_inverted.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "some_condition",
                                Base(
                                    Bool,
                                ),
                            ),
                        ],
                        return_type: Base(
                            Bool,
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/return_bool_inverted.fe:3:20
  │
3 │         return not some_condition
  │                    ^^^^^^^^^^^^^^ attributes hash: 10866140763116710699
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_bool_inverted.fe:3:16
  │
3 │         return not some_condition
  │                ^^^^^^^^^^^^^^^^^^ attributes hash: 10866140763116710699
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_bool_inverted.fe:2:5
  │  
2 │ ╭     pub def bar(some_condition: bool) -> bool:
3 │ │         return not some_condition
  │ ╰─────────────────────────────────^ attributes hash: 4558158003123059212
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "some_condition",
                Base(
                    Bool,
                ),
            ),
        ],
        return_type: Base(
            Bool,
        ),
    }

note: 
  ┌─ features/return_bool_inverted.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar(some_condition: bool) -> bool:
3 │ │         return not some_condition
  │ ╰─────────────────────────────────^ attributes hash: 4216990958196523964
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "some_condition",
                        Base(
                            Bool,
                        ),
                    ),
                ],
                return_type: Base(
                    Bool,
                ),
            },
        ],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/return_bool_inverted.fe:2:33
  │
2 │     pub def bar(some_condition: bool) -> bool:
  │                                 ^^^^ attributes hash: 8311861578736502650
  │
  = Base(
        Bool,
    )

note: 
  ┌─ features/return_bool_inverted.fe:2:42
  │
2 │     pub def bar(some_condition: bool) -> bool:
  │                                          ^^^^ attributes hash: 8311861578736502650
  │
  = Base(
        Bool,
    )


